# personagymattack

./: .gitignore  AGENTBEATS_INTEGRATION.md  AGENTBEATS_OFFICIAL_GUIDE.md  AGENTBEATS_QUICKREF.md  AGENTBEATS_READY.md  AGENTBEATS_SUBMISSION.md  AGENTBEATS_UPLOAD_SUMMARY.md  CONVERSATION_COMPARISON.md  Dockerfile  END_TO_END_TEST_RESULTS.md  GITHUB_DEPLOY.md  QUICK_RESULTS_SUMMARY.md  README.md  SUBMISSION_STEPS.md  SYSTEM_EXPLANATION.md  deploy_agentbeats.sh  install_deps.sh  pyproject.toml  railway.json  requirements.txt  run.sh  start_codespaces.sh  test_llm_agent.py  test_local_model_agent.py  test_white_agent.py
.devcontainer/: devcontainer.json
agentbeats/: README.md  __init__.py  config.yaml  controller.py  green_agent.py  green_agent_a2a.py  requirements.txt
src/personagym_r/: __init__.py  api_schema.py  orchestrator.py  run_green.py
src/personagym_r/attacker/: policy.py  tactics.py
src/personagym_r/baselines/: claude_model_agent.py  local_model_agent.py  openai_model_agent.py  proj_v1.code-workspace  white_prompt_only.py  white_tool_user.py
src/personagym_r/graders/: action_justification.py  breakdetect.py  compose.py  efficiency.py  expected_action.py  persona.py  safety.py
src/personagym_r/tools/: io_bus.py  (+2 more)
tasks/chef_003/: goal.json  persona.json  rubric.json
tasks/chef_004/: persona.json
tasks/startup_founder_001/: goal.json  persona.json  rubric.json  seed.json
tasks/tech_support_002/: goal.json  persona.json  rubric.json
tasks/travel_agent_001/: persona.json
tasks/travel_yosemite_001/: goal.json  persona.json  rubric.json  seed.json
